--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 $blue:#3C57B7;
 $orang:#FBC341;
+$black:#000000;
 * {
   box-sizing: border-box;
 }
@@ -156,5 +157,166 @@ body,html {
     background-image: url(../img/work.png);
     height: 337px;
     margin-top: -23px;
+    display: flex;
+    position: relative;
+    .num {
+      width: 51px;
+      height: 71px;
+      border-radius: 50px;
+      background-color: $black;
+      margin-top: 95px;
+      margin-left: 190px;
+      font-family: Montserrat Alternates;
+      font-size: 22px;
+      font-weight: 900;
+      line-height: 22px;
+      letter-spacing: 0em;
+      text-align: center;
+      color: #FBC341;
+      padding-top: 24px;
+    }
+    p {
+      position: absolute;
+      top: 110px;
+      left:262px;
+      font-family: Montserrat Alternates;
+      font-size: 22px;
+      font-weight: 400;
+      line-height: 22px;
+    }
+    span {
+      font-weight: 600;
+    }
+    .two {
+      margin-top: 151px;
+      margin-left: 433px;
+    }
+    .three{
+      margin-left: 548px;
+      margin-top: 216px;
+    }
+    .p-two {
+      top: 154px;
+      left: 746px;
+    }
+    .p-three {
+      top: 222px;
+      left: 1343px;
+    }
+    .line2 {
+      width: 176.85px;
+      height: 48.42px;
+      position: absolute;
+      right: 605px;
+      top: 167px;
+    }
+    .line1 {
+      width: 129px;
+      height: 88.42px;
+      position: absolute;
+      left: 542px;
+      top: 108px;
+    }
+  }
+  .boss {
+    background-image: url("../img/bosmain.png");
+    width: 562px;
+    height: 352px;
+    position: absolute;
+    right: 71px;
+    top: 188px;
+  }
+}
+.section-worst {
+  margin-top: 20px;
+  margin-left: 17px;
+
+  h1{
+    font-family: Montserrat Alternates;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-left: 177px;
+  }
+  p{
+    font-family: Montserrat Alternates;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-top: 10px;
+    padding-left: 178px;
+  }
+  .hudshie {
+    position: relative;
+    padding-top: 37px;
+
+    .worst {
+      width: 1534px;
+      .slider{
+        width: 376px;
+        height: 238px;
+        background-color:#1B1B1B;
+        border-radius: 10px;
+        position: relative;
+        display: flex;
+        .text-top {
+          font-family: Montserrat Alternates;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 14px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: #ffff;
+          padding-top: 15px;
+          padding-left: 10px;
+        }
+        .otziv{
+          width: 58px;
+          height: 25px;
+          background-color: #EF4040;
+          border-radius: 100px;
+          margin-top: 10px;
+          margin-left: 140px;
+          font-family: Montserrat Alternates;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 14px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: #ffffff;
+          padding-left: 10px;
+          padding-top: 5px;
+          .question {
+            width: 21px;
+            height: 21px;
+            border-radius: 100%;
+            background-color: #fff;
+            margin-left: 25px;
+            margin-top: -17px;
+            text-align: center;
+            font-family: Montserrat Alternates;
+            font-size: 14px;
+            font-weight: 900;
+            line-height: 14px;
+            letter-spacing: 0em;
+            color: #8A8A8A;
+            padding-top: 5px;
+
+          }
+        }
+      }
+      .slider-top {
+        width: 376px;
+        height: 201px;
+        background-color: $orang;
+        border-radius: 10px;
+        position: absolute;
+        top: 40px;
+      }
+    }
   }
 }
