--- a/css/style.scss
+++ b/css/style.scss
@@ -316,6 +316,457 @@ body,html {
         border-radius: 10px;
         position: absolute;
         top: 40px;
+        .text-top {
+          display: flex;
+          padding-top: 5px;
+          padding-left: 10px;
+          align-items: center;
+          margin-bottom: 15px;
+            .service {
+              width: 89px;
+              height: 27px;
+              background-color: black;
+              text-align: center;
+              color: #fff;
+              border-radius: 100px;
+              font-family: Montserrat Alternates;
+              font-size: 14px;
+              font-weight: 700;
+              line-height: 14px;
+              letter-spacing: 0em;
+              margin-left: 100px;
+              padding-top: 7px;
+
+            }
+          .adres {
+            font-family: Montserrat Alternates;
+            font-size: 11px;
+            font-weight: 500;
+            line-height: 11px;
+            letter-spacing: 0em;
+            text-align: left;
+          }
+        }
+        .center {
+          display: flex;
+          justify-content: space-around;
+          margin-top: 10px;
+          margin-bottom: 16px;
+          .img-1 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin1.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+          .img-2 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin2.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+          .img-3 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin3.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+          .img-4 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin4.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+        }
+        h1{
+          font-family: Montserrat Alternates;
+          font-size: 14px;
+          font-weight: 600;
+          line-height: 14px;
+          letter-spacing: 0em;
+          text-align: left;
+          padding-left: 10px;
+        }
+        .bottom {
+          margin-left: 142px;
+          a{
+            border: 2px solid;
+            border-radius: 100px;
+            padding: 3px 25px;
+            text-decoration: none;
+            font-family: Montserrat Alternates;
+            font-size: 12px;
+            font-weight: 500;
+            line-height: 12px;
+            letter-spacing: 0em;
+            text-align: center;
+          }
+          .pod {
+            color: #ffffff;
+            background-color: #1B1B1B;
+            border: none;
+            padding: 6px 23px;
+          }
+          .ot {
+            color: #1B1B1B;
+          }
+        }
+      }
+      .rtel {
+        .otziv {
+          margin-left: 63px;
+        }
+      }
+      .rtel2 {
+        .text-top {
+          .service {
+            width: 181px;
+            margin-left: 120px;
+          }
+        }
+        .center {
+          .img-1 {
+            background-image: url("../img/tel1.png");
+          }
+          .img-2 {
+            background-image: url("../img/tel2.png");
+          }
+          .img-3 {
+            background-image: url("../img/tel3.png");
+          }
+          .img-4 {
+            background-image: url("../img/tel4.png");
+          }
+        }
+      }
+      .rteh {
+        .otziv {
+          margin-left: 163px;
+        }
+      }
+      .rteh2 {
+        .text-top {
+          .service {
+            width: 235px;
+            margin-left: 65px;
+          }
+        }
+        .center {
+          .img-1 {
+            background-image: url("../img/rem.png");
+          }
+          .img-2 {
+            background-image: url("../img/rem2.png");
+          }
+          .img-3 {
+            background-image: url("../img/rem3.png");
+          }
+          .img-4 {
+            background-image: url("../img/rem4.png");
+          }
+        }
+      }
+      .pc {
+        .otziv {
+          margin-left: 177px;
+        }
+      }
+      .pc2 {
+        .text-top {
+          .service {
+            width: 151px;
+            margin-left: 153px;
+          }
+        }
+        .center {
+          .img-1 {
+            background-image: url("../img/rem.png");
+          }
+          .img-2 {
+            background-image: url("../img/rem2.png");
+          }
+          .img-3 {
+            background-image: url("../img/rem3.png");
+          }
+          .img-4 {
+            background-image: url("../img/rem4.png");
+          }
+        }
+      }
+    }
+  }
+}
+.section-board {
+  margin-top: 42px;
+  margin-left: 17px;
+
+  h1{
+    font-family: Montserrat Alternates;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-left: 177px;
+  }
+  p{
+    font-family: Montserrat Alternates;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-top: 10px;
+    padding-left: 178px;
+  }
+  .hudshie {
+    position: relative;
+    padding-top: 37px;
+
+    .worst {
+      width: 1534px;
+      .slider{
+        width: 376px;
+        height: 238px;
+        background-color:#1B1B1B;
+        border-radius: 10px;
+        position: relative;
+        display: flex;
+        .text-top {
+          font-family: Montserrat Alternates;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 14px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: #ffff;
+          padding-top: 15px;
+          padding-left: 10px;
+        }
+        .otziv{
+          width: 58px;
+          height: 25px;
+          background-color: #38BB4D;
+          border-radius: 100px;
+          margin-top: 10px;
+          margin-left: 140px;
+          font-family: Montserrat Alternates;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 14px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: #ffffff;
+          padding-left: 10px;
+          padding-top: 5px;
+          .question {
+            width: 21px;
+            height: 21px;
+            border-radius: 100%;
+            background-color: #fff;
+            margin-left: 25px;
+            margin-top: -17px;
+            text-align: center;
+            font-family: Montserrat Alternates;
+            font-size: 14px;
+            font-weight: 900;
+            line-height: 14px;
+            letter-spacing: 0em;
+            color: #8A8A8A;
+            padding-top: 5px;
+
+          }
+        }
+      }
+      .slider-top {
+        width: 376px;
+        height: 201px;
+        background-color: $orang;
+        border-radius: 10px;
+        position: absolute;
+        top: 40px;
+        .text-top {
+          display: flex;
+          padding-top: 5px;
+          padding-left: 10px;
+          align-items: center;
+          margin-bottom: 15px;
+          .service {
+            width: 89px;
+            height: 27px;
+            background-color: black;
+            text-align: center;
+            color: #fff;
+            border-radius: 100px;
+            font-family: Montserrat Alternates;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 14px;
+            letter-spacing: 0em;
+            margin-left: 100px;
+            padding-top: 7px;
+
+          }
+          .adres {
+            font-family: Montserrat Alternates;
+            font-size: 11px;
+            font-weight: 500;
+            line-height: 11px;
+            letter-spacing: 0em;
+            text-align: left;
+          }
+        }
+        .center {
+          display: flex;
+          justify-content: space-around;
+          margin-top: 10px;
+          margin-bottom: 16px;
+          .img-1 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin1.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+          .img-2 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin2.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+          .img-3 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin3.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+          .img-4 {
+            width: 80px;
+            height: 81px;
+            background-image: url(../img/klin4.png);
+            border-radius: 5px;
+            background-position: center;
+          }
+        }
+        h1{
+          font-family: Montserrat Alternates;
+          font-size: 14px;
+          font-weight: 600;
+          line-height: 14px;
+          letter-spacing: 0em;
+          text-align: left;
+          padding-left: 10px;
+        }
+        .bottom {
+          margin-left: 142px;
+          a{
+            border: 2px solid;
+            border-radius: 100px;
+            padding: 3px 25px;
+            text-decoration: none;
+            font-family: Montserrat Alternates;
+            font-size: 12px;
+            font-weight: 500;
+            line-height: 12px;
+            letter-spacing: 0em;
+            text-align: center;
+          }
+          .pod {
+            color: #ffffff;
+            background-color: #1B1B1B;
+            border: none;
+            padding: 6px 23px;
+          }
+          .ot {
+            color: #1B1B1B;
+          }
+        }
+      }
+      .rtel {
+        .otziv {
+          margin-left: 63px;
+        }
+      }
+      .rtel2 {
+        .text-top {
+          .service {
+            width: 181px;
+            margin-left: 120px;
+          }
+        }
+        .center {
+          .img-1 {
+            background-image: url("../img/tel1.png");
+          }
+          .img-2 {
+            background-image: url("../img/tel2.png");
+          }
+          .img-3 {
+            background-image: url("../img/tel3.png");
+          }
+          .img-4 {
+            background-image: url("../img/tel4.png");
+          }
+        }
+      }
+      .rteh {
+        .otziv {
+          margin-left: 163px;
+        }
+      }
+      .rteh2 {
+        .text-top {
+          .service {
+            width: 235px;
+            margin-left: 65px;
+          }
+        }
+        .center {
+          .img-1 {
+            background-image: url("../img/rem.png");
+          }
+          .img-2 {
+            background-image: url("../img/rem2.png");
+          }
+          .img-3 {
+            background-image: url("../img/rem3.png");
+          }
+          .img-4 {
+            background-image: url("../img/rem4.png");
+          }
+        }
+      }
+      .pc {
+        .otziv {
+          margin-left: 177px;
+        }
+      }
+      .pc2 {
+        .text-top {
+          .service {
+            width: 151px;
+            margin-left:153px;
+          }
+        }
+        .center {
+          .img-1 {
+            background-image: url("../img/rem.png");
+          }
+          .img-2 {
+            background-image: url("../img/rem2.png");
+          }
+          .img-3 {
+            background-image: url("../img/rem3.png");
+          }
+          .img-4 {
+            background-image: url("../img/rem4.png");
+          }
+        }
       }
     }
   }
